# enterprise-knowledge-mcp-server-speckit

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/document-preprocessing/: SKILL.md
.claude/skills/document-preprocessing/examples/: RUN_LOG.md
.claude/skills/document-preprocessing/reference/: OUTPUT_SCHEMA.md
.claude/skills/document-preprocessing/scripts/: preprocess.py
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: __init__.py  config.py  landing.py  main.py  mcp_server.py  models.py
app/api/: documents.py
app/services/: __init__.py  chunker.py  cleaner.py  embedder.py  parser.py  pipeline.py  retriever.py  vector_store.py
specs/001-enterprise-knowledge-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-enterprise-knowledge-mcp/checklists/: requirements.md
specs/001-enterprise-knowledge-mcp/contracts/: mcp-tools.md  rest-api.md  skill-cli.md
tests/: _fakes.py  conftest.py  mcp_client_demo.py  test_chunker.py  test_cleaner.py  test_health.py  test_index.py  test_mcp_integration.py  test_mcp_resources.py  test_mcp_tools.py  test_parser.py  test_parser_pptx.py  test_retriever.py  test_skill_preprocess.py  test_upload.py
tests/fixtures/: sample.docx
