[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-knowledge-mcp-server"
version = "0.1.0"
description = "Enterprise document knowledge base exposed as a Remote MCP Server, plus a reusable document-preprocessing Claude Skill."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# NOTE: Target deployment node is Zeabur Arm Ampere A1 (linux/arm64, no GPU).
# All ML inference runs CPU-only. torch must resolve to a CPU build (see Dockerfile,
# which installs the CPU wheel index). Every dependency below must provide an
# aarch64 wheel or build cleanly on ARM.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastmcp>=0.4",
    "docling>=2.0",
    "rapidocr-onnxruntime>=1.3",
    "onnxruntime>=1.17",
    "sentence-transformers>=2.7",
    "rank-bm25>=0.2.2",
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
